--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,98 @@
-# Entorno Virtual de Python
-venv/
+# =================================================================
+# APOLOBILLING - ARCHIVOS EXCLUIDOS DE GITHUB
+# =================================================================
+
+# Python
 __pycache__/
-*.pyc
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+pip-log.txt
+pip-delete-this-directory.txt
+.DS_Store
+*.db
+*.sqlite3
+*.sqlite
+tarificador.db
+
+# Java
+target/
+*.class
+*.jar
+*.war
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Rust
-/target/
-**/target/
+target/
+Cargo.lock
 
-# Binaries
-*.exe
-*.bin
-
-# Archives
-*.tar.gz
-*.zip
+# Configuración local
+.env.local
+.env.production
+.env.development
+backend/.env
+rust-billing-engine/.env
 
 # Logs
+logs/
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# OS
+# Archivos temporales
+*.tmp
+*.temp
+*.swp
+*.swo
+*~
 .DS_Store
+Thumbs.db
 
+# Archivos de backup
+*.backup
+*.bak
+*.old
+
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Archivos específicos del proyecto
+password_reset.txt
+com.tarificador
+*.whl
+*.tar.gz
+
+# Archivos del sistema
+*.pid
+*.seed
+*.pid.lock
+
+# Certificados SSL (si existen)
+*.pem
+*.key
+*.crt
+ssl/
+
+# Base de datos de desarrollo
+*.db
+*.sqlite
+*.sqlite3
