--- a/rust-billing-engine/Cargo.toml
+++ b/rust-billing-engine/Cargo.toml
@@ -10,6 +10,9 @@ actix-web = "4.4"
 actix-rt = "2.9"
 actix-cors = "0.7"
 
+# Decimal precision
+rust_decimal = { version = "1.36", features = ["maths", "serde", "db-tokio-postgres"] }
+
 # Async runtime
 tokio = { version = "1.35", features = ["full"] }
 tokio-util = { version = "0.7", features = ["codec"] }
@@ -30,10 +33,7 @@ serde_json = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
 
 # UUID
-uuid = { version = "1.6", features = ["v4", "serde"] }
-
-# Decimal precision
-rust_decimal = { version = "1.33", features = ["serde-float", "db-tokio-postgres"] }
+uuid = { version = "1.11", features = ["v4", "serde", "v7"] }
 
 # Logging
 tracing = "0.1"
